[package]
name = "tchandle-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-bpf = { path = "/home/afredette/projects/aya/bpf/aya-bpf" }

# aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { path = "/home/afredette/projects/aya/bpf/aya-log-ebpf" }



tchandle-common = { path = "../tchandle-common" }

[[bin]]
name = "tchandle"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
