[package]
name = "tchandle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = { path = "/home/afredette/projects/aya/aya-log" }
tchandle-common = { path = "../tchandle-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "tchandle"
path = "src/main.rs"
